public/src/scss/components/Home/Screenshots.scss
@import '../../mixins';
@import '../../trigonometry';

$animation-duration: 400ms;
$transform-length: 100px;

@include home-content('screenshots') {
	$degrees: 6deg;
	
	@include stack;
	
	@each $direction in (left, right) {
		&.#{$direction} > .content {
			> .title,
			> .screenshot > :last-child > img,
			> .info > .title {
				animation: screenshots-#{$direction} $animation-duration ease-in-out;
			}
		}
	}
	
	> .background {
		@include top-gradient($degrees, $is-right: true);
		
		height: calc(100vh + #{tan($degrees)} * 100vw);
	}
	
	> .content {
		display: flex;
		flex-direction: column;
		justify-content: center;
		align-items: center;
		height: 100vh;
		z-index: 0;
		
		@media (min-height: 775px) {
			> .title {
				font-size: 24px !important;
				line-height: 38px !important;
			}
			
			> .screenshot {
				&,
				> :last-child > img {
					height: calc(100vh - 175px * 2) !important;
				}
			}
		}
		
		@media (min-width: 900px) {
			flex-direction: row;
			
			> .title {
				display: none;
			}
			
			> .screenshot {
				height: 100% !important;
				
				> :first-child {
					--dimension: calc(100vh - 200px * 2) !important;
				}
				
				> :last-child > img {
					height: calc(100vh - 175px * 2) !important;
				}
			}
			
			> .info {
				align-items: flex-start !important;
				margin-left: 60px;
				
				> .title {
					display: block !important;
				}
				
				> .navigation > button {
					background: transparentize(white, 0.9) !important;
					
					&:hover {
						background: transparentize(white, 0.8) !important;
					}
				}
				
				> .gallery > button {
					background: transparentize(white, 0.8) !important;
					
					&.selected {
						background: transparentize(white, 0.2) !important;
					}
					
					&:not(.selected) {
						&:hover,
						&:focus {
							background: transparentize(white, 0.7) !important;
						}
					}
				}
			}
		}
		
		> .title {
			margin-bottom: 30px;
			text-align: center;
			font-size: 20px;
			line-height: 34px;
			color: white;
			transition: font-size 0.3s, line-height 0.3s;
		}
		
		> .screenshot {
			@include stack;
			
			justify-items: center;
			align-items: center;
			transition: height 0.3s;
			
			&,
			> :last-child > img {
				height: calc(100vh - 160px * 2);
			}
			
			@media (min-width: 965px) {
				> :first-child {
					--dimension: calc(100vh - 175px * 2) !important;
				}
				
				> :last-child > img {
					height: calc(100vh - 150px * 2) !important;
				}
			}
			
			@media (min-width: 1020px) {
				> :first-child {
					--dimension: calc(100vh - 150px * 2) !important;
				}
				
				> :last-child > img {
					height: calc(100vh - 125px * 2) !important;
				}
			}
			
			@media (min-width: 1185px) {
				> :first-child {
					--dimension: calc(100vh - 100px * 2) !important;
				}
				
				> :last-child > img {
					height: calc(100vh - 75px * 2) !important;
				}
			}
			
			> :first-child {
				width: var(--dimension);
				height: var(--dimension, calc(100% - 50px * 2));
				margin: -65px -40px;
				transition: width 0.3s, height 0.3s;
			}
		}
		
		> .info {
			display: flex;
			flex-direction: column;
			align-items: center;
			
			> .title {
				display: none;
				font-size: 38px;
				line-height: 50px;
				color: white;
				transition: font-size 0.3s, line-height 0.3s;
				
				@media (min-width: 1050px) {
					font-size: 42px;
					line-height: 54px;
				}
				
				@media (min-width: 1085px) {
					font-size: 46px;
					line-height: 58px;
				}
				
				@media (min-width: 1215px) {
					font-size: 50px;
					line-height: 62px;
				}
				
				@media (min-width: 1250px) {
					font-size: 54px;
					line-height: 66px;
				}
				
				@media (min-width: 1300px) {
					font-size: 58px;
					line-height: 70px;
				}
			}
			
			> .navigation {
				display: flex;
				margin-top: 40px;
				
				> button {
					$height: 50px;
					$scale-factor: 1.3;
					
					width: 80px;
					height: $height;
					background: transparentize(white, 0.8);
					border-radius: $height / 2;
					transition: background 0.3s;
					
					> svg {
						margin: 0 auto;
						color: white;
					}
					
					&:first-child {
						margin-right: 12px;
						
						> svg {
							transform: scale($scale-factor);
						}
					}
					
					&:last-child > svg {
						transform: scale(-$scale-factor, $scale-factor);
					}
					
					&:hover {
						background: transparentize(white, 0.7);
					}
				}
			}
			
			> .gallery {
				margin-top: 30px;
				
				> button {
					$dimension: 20px;
					
					width: $dimension;
					height: $dimension;
					background: transparentize(white, 0.7);
					border-radius: 50%;
					transition: background 0.3s;
					
					&.selected {
						background: white;
					}
					
					&:not(.selected) {
						&:hover,
						&:focus {
							background: transparentize(white, 0.5);
						}
					}
					
					&:not(:last-child) {
						margin-right: 12px;
					}
				}
			}
		}
	}
	
	@keyframes screenshots-left {
		50% {
			opacity: 0;
			transform: translateX($transform-length);
		}
		
		50.01% {
			opacity: 0;
			transform: translateX(-$transform-length);
		}
	}
	
	@keyframes screenshots-right {
		50% {
			opacity: 0;
			transform: translateX(-$transform-length);
		}
		
		50.01% {
			opacity: 0;
			transform: translateX($transform-length);
		}
	}
}

